log
Thu 16 May 2024 07:04:03 PM UTC: 
 tests:  0|5
total_score: 0/70
2f050f1
Thu 16 May 2024 07:27:54 PM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:26: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   54 |             if(n->sudo[i][j] == k){
      |                ~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:60:23: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   60 |             if(n->sudo[j][i] != k){
      |                ~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:49:17: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   49 |    for(j = 0; i < 9; i++){
      |               ~~^~~
cc1: all warnings being treated as errors
Compilation failed
403a647
Thu 16 May 2024 07:28:15 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:17: error: ‘n’ is a pointer; did you mean to use ‘->’?
   54 |             if(n.sudo[i][j] == k){
      |                 ^
      |                 ->
sudoku.c:60:17: error: ‘n’ is a pointer; did you mean to use ‘->’?
   60 |             if(n.sudo[j][i] != k){
      |                 ^
      |                 ->
Compilation failed
e8cd1f9
Thu 16 May 2024 07:28:30 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:26: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   54 |             if(n->sudo[i][j] == k){
      |                ~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:60:23: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   60 |             if(n->sudo[j][i] != k){
      |                ~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:49:17: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   49 |    for(j = 0; i < 9; i++){
      |               ~~^~~
cc1: all warnings being treated as errors
Compilation failed
d3dd11a
Thu 16 May 2024 07:32:03 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:26: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   54 |             if(n->sudo[i][j] == k){
      |                ~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
sudoku.c:60:23: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   60 |             if(n->sudo[j][i] != k){
      |                ~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
ce85ba2
Thu 16 May 2024 07:34:42 PM UTC: 
 sudoku.c | 40 +++++++++++++++++++++++++++++++---------
 1 file changed, 31 insertions(+), 9 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:15: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |       int i,j,k;
      |               ^
sudoku.c: In function ‘is_valid’:
sudoku.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
At top level:
sudoku.c:47:8: error: ‘is_valid’ defined but not used [-Werror=unused-function]
   47 |    int is_valid(Node* n){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ea60cc7
Thu 16 May 2024 07:35:11 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
0bc78cd
Thu 16 May 2024 07:37:22 PM UTC: 
 sudoku.c | 29 ++++++++++-------------------
 1 file changed, 10 insertions(+), 19 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:91:10: error: unused variable ‘j’ [-Werror=unused-variable]
   91 |   int i, j;
      |          ^
sudoku.c:91:7: error: unused variable ‘i’ [-Werror=unused-variable]
   91 |   int i, j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
3a5e1aa
Thu 16 May 2024 07:44:08 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|4
total_score: 20/70
f311c10
Thu 16 May 2024 07:46:33 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 20/70
e9f5866
